# Mini-Vector-Editor-SVG-

./: CMakeLists.txt  GraphicsObject.cpp  structure.txt
Objects/: GraphicsObject.cpp  GraphicsObject.h  Makefile  Object.h  app  circle.cpp  circle.h  line.cpp  line.h  obj  path.cpp  path.h  qt.cpp  rect.cpp  rect.h  text.cpp  text.h
Objects/config/: Default.h
io/: Makefile  ParserSvg.cpp  ParserSvg.h  SvgSaver.cpp  SvgSaver.h
io/Parser/: Makefile  ParserCircle.cpp  ParserLine.cpp  ParserPath.cpp  ParserRect.cpp  ParserSvg.cpp  ParserSvg.h  ParserText.cpp  ParserUtils.cpp
src/: main.cpp
src/Objects/: GraphicsObject.cpp  GraphicsObject.h  Makefile  Object.h  circle.cpp  circle.h  hexagon.cpp  hexagon.h  line.cpp  line.h  om  path.cpp  path.h  polyline.cpp  polyline.h  rect.cpp  rect.h  text.cpp  text.h
src/Objects/config/: Default.h
src/canvas/: canvas.cpp  canvas.h
src/commands/: AddObjectCommand.cpp  AddObjectCommand.h  ChangeCornerRadiusCommand.cpp  ChangeCornerRadiusCommand.h  ChangeFillCommand.cpp  ChangeFillCommand.h  ChangeStrokeCommand.cpp  ChangeStrokeCommand.h  ChangeSwCommand.cpp  ChangeSwCommand.h  Command.h  CutCommand.cpp  CutCommand.h  MoveCommand.cpp  MoveCommand.h  PasteCommand.cpp  PasteCommand.h  ResizeCommand.cpp  ResizeCommand.h
src/io/: SvgSaver  SvgSaver.cpp  SvgSaver.h
src/io/Parser/: ParserCircle.cpp  ParserHexagon.cpp  ParserLine.cpp  ParserPath.cpp  ParserPolyline.cpp  ParserRect.cpp  ParserSvg.cpp  ParserSvg.h  ParserText.cpp  ParserUtils.cpp
src/ui/: actions.cpp  actions.h  mainwindow.cpp  mainwindow.h
